--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,8 @@
 complex_word_model/
 
 # Remove all of the Data from The Epoch Results -> too much for Git
-results/checkpoint-5296/config.json
-results/checkpoint-5296/model.safetensors
-results/checkpoint-5296/optimizer.pt
-results/checkpoint-5296/rng_state.pth
-results/checkpoint-5296/scheduler.pt
-results/checkpoint-5296/training_args.bin
-
+results/*
+results.txt
 # Empty folder
 tmp_trainer/
 
